# macro-ai-digest

./: .env.example  .gitignore  CHECKLIST.md  README.md  pyproject.toml
.claude/commands/: health.md
config/: edgar_tickers.yaml  fred_series.yaml  rss_feeds.yaml  subreddits.yaml  substack_feeds.yaml
launchd/: com.dr.digest.am.plist  com.dr.digest.askbot.plist  com.dr.digest.backtest.plist  com.dr.digest.calendar.plist  com.dr.digest.dashboard.plist  com.dr.digest.debate.plist  com.dr.digest.essay.plist  com.dr.digest.pm.plist  com.dr.digest.signals.plist  com.dr.digest.velocity.plist  com.dr.digest.weekly.plist  com.dr.mlx.server.plist
scripts/: init_db.py  install_launchd.sh  setup.py  smoke_test.py  smoke_test_phase2.py  smoke_test_phase3.py
secrets/: README.md
sql/databricks/: bronze.sql  gold.sql  silver.sql
src/digest/: __init__.py  ask.py  backtest.py  brief.py  capture.py  charts.py  claude_cli.py  cli.py  cluster.py  config.py  connections.py  dashboard.py  db.py  debate.py  embeddings.py  ensemble.py  entities.py  essay.py  health.py  indicators.py  macro_regime.py  obsidian.py  outcomes.py  predictions.py  security.py  sentiment.py  signals.py  stock_tracker.py  storylines.py  summarize.py  telegram_bot.py  topic_state.py  triage.py  velocity.py  weekly.py
src/digest/ingest/: __init__.py  arxiv.py  base.py  calendar.py  cboe.py  cftc.py  clipped.py  edgar.py  fred.py  ftd.py  fulltext.py  gmail.py  hackernews.py  huggingface.py  insider.py  reddit.py  rss.py  substack.py  yahoo.py
src/digest/sinks/: __init__.py  notify.py
tests/: conftest.py  test_ask.py  test_brief.py  test_capture.py  test_catalog.py  test_cluster.py  test_connections.py  test_db.py  test_embeddings.py  test_fulltext.py  test_health.py  test_ingest_base.py  test_notify.py  test_obsidian.py  test_orchestration.py  test_pipeline_quality.py  test_predictions.py  test_sink.py  test_storylines.py  test_summarize_backends.py  test_telegram_bot.py  test_wave4.py
