[project]
name = "macro-ai-digest"
version = "0.1.0"
description = "Curated twice-daily digest: Fed/markets, China, AI, AI capex, data viz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "feedparser>=6.0",
    "praw>=7.8",
    "fredapi>=0.5",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "rich>=13.7",
    "click>=8.1",
    "yfinance>=0.2",
]

[project.scripts]
digest = "digest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digest"]

[tool.ruff]
line-length = 100
target-version = "py312"
