[project]
name = "macro-ai-digest"
version = "0.1.0"
description = "Curated twice-daily digest: Fed/markets, China, AI, AI capex, data viz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7",
    "requests>=2.32",
    "feedparser>=6.0",
    "praw>=7.8",
    "fredapi>=0.5",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "rich>=13.7",
    "click>=8.1",
    "yfinance>=0.2",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "pandas>=2.0",
    "digest-core",
]

[project.scripts]
digest = "digest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digest"]

# digest-core is the shared framework, canonically housed in the sibling
# pc-insurance-digest repo's packages/. Consumed here as an editable path dep so
# core changes reflect immediately in both domains. See that repo's
# packages/digest-core/SEAMS_PLAN.md for the extraction story.
[tool.uv.sources]
digest-core = { path = "../pc-insurance-digest/packages/digest-core", editable = true }

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
